fix download tags layout issues

--- a/assets/css/less/pages.less
+++ b/assets/css/less/pages.less
@@ -2067,15 +2067,12 @@ input#edd-discount,
 /* ----------------------------- *
  * Featured Download Template (theme and extension)
  * ----------------------------- */
-.tax-download_category .extensions-header-area .inner,
-.tax-download_tag .extensions-header-area .inner {
-	padding-bottom: 40px;
-}
 
 /* extensions page */
 
 .post-type-archive-download .edd-downloads-area .inner,
-.download-search .edd-downloads-area .inner {
+.download-search .edd-downloads-area .inner,
+.tax-download_category .edd-downloads-area .inner {
 	padding-top: 30px;
 }
 
